unpackaged/main/default/objects/Gearset_Team__c/Gearset_Team__c.object-meta.xml
<CustomObject>
    <label>Gearset Team</label>
    <nameField>
        <label>Gearset Team Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Gearset Teams</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>