unpackaged/main/default/objects/Gearset_Team__c/fields/Billing_cycle__c.field-meta.xml
<CustomField>
    <fullName>Billing_cycle__c</fullName>
    <description>This is the billing cycle that the account is using. It&#39;s mixed if there are different subscriptions assigned to the team that have different cycles</description>
    <inlineHelpText>This is the billing cycle that the account is using. It&#39;s mixed if there are different subscriptions assigned to the team that have different cycles</inlineHelpText>
    <label>Billing cycle</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>SemiAnnual</fullName>
            </value>
            <value>
                <fullName>Annual</fullName>
            </value>
            <value>
                <fullName>TwoYear</fullName>
            </value>
            <value>
                <fullName>ThreeYear</fullName>
            </value>
            <value>
                <fullName>mixed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>