unpackaged/main/default/objects/Gearset_Team__c/fields/Data_residency_region__c.field-meta.xml
<CustomField>
    <fullName>Data_residency_region__c</fullName>
    <description>This is the Gearset cluster that this team is deployed on. Each cluster is completely isolated from the other, so we can guarantee that data is never leaving the region.</description>
    <inlineHelpText>This is the Gearset cluster that this team is deployed on. Each cluster is completely isolated from the other, so we can guarantee that data is never leaving the region.</inlineHelpText>
    <label>Data residency region</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>EU</fullName>
            </value>
            <value>
                <fullName>US</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>