unpackaged/main/default/objects/Gearset_Team__c/fields/Deployment_success_rate__c.field-meta.xml
<CustomField>
    <fullName>Deployment_success_rate__c</fullName>
    <description>The percentage of deployments this team started that succeeded, over the past 45 days. The nuance is we count any deployments that failed due to test failure as a success, as it isn't our fault. If no deployments in last 45, then 0</description>
    <inlineHelpText>The percentage of deployments this team started that succeeded, over the past 45 days. The nuance is we count any deployments that failed due to test failure as a success, as it isn't our fault. If no deployments in last 45, then 0</inlineHelpText>
    <label>Deployment success rate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>