unpackaged/main/default/objects/Gearset_Team__c/fields/Effective_trial_length__c.field-meta.xml
<CustomField>
    <fullName>Effective_trial_length__c</fullName>
    <description>This is the length of the trial that the team effectively had, after you take into account any trial adjustments the sales reps applied</description>
    <inlineHelpText>This is the length of the trial that the team effectively had, after you take into account any trial adjustments the sales reps applied</inlineHelpText>
    <label>Effective trial length</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>