unpackaged/main/default/objects/Gearset_Team__c/fields/Events_add_backup_count__c.field-meta.xml
<CustomField>
    <fullName>Events_add_backup_count__c</fullName>
    <description>The number of times the add backup event has happened. If this is happening a lot more frequently than the number of times the team is licensed for, it can indicate churn in creating and deleting jobs.</description>
    <inlineHelpText>The number of times the add backup event has happened. If this is happening a lot more frequently than the number of times the team is licensed for, it can indicate churn in creating and deleting jobs.</inlineHelpText>
    <label>Add backup job event count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>