unpackaged/main/default/objects/Gearset_Team__c/fields/Events_add_change_monitor_count__c.field-meta.xml
<CustomField>
    <fullName>Events_add_change_monitor_count__c</fullName>
    <label>Add change monitor event count</label>
    <description>The number of times that the add change monitor event has happened. Each of these events correlates to somebody creating a change monitor job. This count can be higher than the number of currently configured jobs if they&#39;ve then gone on to delete jobs</description>
    <inlineHelpText>The number of times that the add change monitor event has happened. Each of these events correlates to somebody creating a change monitor job. This count can be higher than the number of currently configured jobs if they&#39;ve then gone on to delete jobs</inlineHelpText>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>