unpackaged/main/default/objects/Gearset_Team__c/fields/Events_add_continuous_integration_count__c.field-meta.xml
<CustomField>
    <fullName>Events_add_continuous_integration_count__c</fullName>
    <label>Add continuous integration event count</label>
    <description>The number of times that the add continuous integration job event has happened. Each of these events correlates to somebody creating a new job. This can be higher than the number of currently configured jobs if the user later deleted some of the jobs</description>
    <inlineHelpText>The number of times that the add continuous integration job event has happened. Each of these events correlates to somebody creating a new job. This can be higher than the number of currently configured jobs if the user later deleted some of the jobs</inlineHelpText>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>