unpackaged/main/default/objects/Gearset_Team__c/fields/Events_authorize_org_count__c.field-meta.xml
<CustomField>
    <fullName>Events_authorize_org_count__c</fullName>
    <label>Number of successful org authorizations</label>
    <description>The number of times that a user on the team has successfully authorized an org. It&#39;s the total number across the team, so correlates with the size of the team as each member configures their own orgs. It can be inflated by sandbox refreshes and reauthing</description>
    <inlineHelpText>The number of times that a user on the team has successfully authorized an org. It&#39;s the total number across the team, so correlates with the size of the team as each member configures their own orgs. It can be inflated by sandbox refreshes and reauthing</inlineHelpText>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>