unpackaged/main/default/objects/Gearset_Team__c/fields/Events_data_deployment_start_count__c.field-meta.xml
<CustomField>
    <fullName>Events_data_deployment_start_count__c</fullName>
    <label>Started a data deployment</label>
    <description>The number of times that a user on this team has started a data deployment</description>
    <inlineHelpText>The number of times that a user on this team has started a data deployment</inlineHelpText>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>