unpackaged/main/default/objects/Gearset_Team__c/fields/Events_login_count__c.field-meta.xml
<CustomField>
    <fullName>Events_login_count__c</fullName>
    <label>Successful logins</label>
    <description>The number of times a user on this team has logged in. This number is indicative, at best, as some users leave the tab open and never let the session expire.</description>
    <inlineHelpText>The number of times a user on this team has logged in. This number is indicative, at best, as some users leave the tab open and never let the session expire.</inlineHelpText>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>