unpackaged/main/default/objects/Gearset_Team__c/fields/Events_test_monitor_count__c.field-meta.xml
<CustomField>
    <fullName>Events_test_monitor_count__c</fullName>
    <label>Add test monitor event count</label>
    <description>The number of times that a user on this team has added a test monitor. This number can be higher than the number of currently configured test monitors for the team if they've deleted jobs after creating them.</description>
    <inlineHelpText>The number of times that a user on this team has added a test monitor. This number can be higher than the number of currently configured test monitors for the team if they've deleted jobs after creating them.</inlineHelpText>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>