unpackaged/main/default/objects/Gearset_Team__c/fields/Events_total__c.field-meta.xml
<CustomField>
    <fullName>Events_total__c</fullName>
    <description>The total number of telemetry events that this team has performed</description>
    <inlineHelpText>The total number of telemetry events that this team has performed</inlineHelpText>
    <label>Total telemetry events</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>