unpackaged/main/default/objects/Gearset_Team__c/fields/Gearset_Team_Id__c.field-meta.xml
<CustomField>
    <fullName>Gearset_Team_Id__c</fullName>
    <externalId>true</externalId>
    <label>Gearset Team Id</label>
    <description>The id of the Gearset team, as you might find on the admin site.</description>
    <inlineHelpText>The id of the Gearset team, as you might find on the admin site.</inlineHelpText>
    <length>36</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>