unpackaged/main/default/objects/Gearset_Team__c/fields/Licenses_assigned__c.field-meta.xml
<CustomField>
    <fullName>Licenses_assigned__c</fullName>
    <label>Assigned licenses</label>
    <description>The total number of licenses assigned to users from the team&#39;s subscription. It can get a little wonky if the team do a lot of reassigning or if the license is assigned from a currently expired subscription, which won&#39;t be detected until they next login</description>
    <inlineHelpText>The total number of licenses assigned to users from the team&#39;s subscription. It can get a little wonky if the team do a lot of reassigning or if the license is assigned from a currently expired subscription, which won&#39;t be detected until they next login</inlineHelpText>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>