unpackaged/main/default/objects/Gearset_Team__c/fields/Licenses_available__c.field-meta.xml
<CustomField>
    <fullName>Licenses_available__c</fullName>
    <label>Available licenses</label>
    <description>The total number of Pro, Enterprise or Platform seats that are available to the team from all subscriptions. Think of it as the total number of licensable &quot;seats&quot;. It can be wonky at renewal time if multiple subscriptions have a few days of overlap</description>
    <inlineHelpText>The total number of Pro, Enterprise or Platform seats that are available to the team from all subscriptions. Think of it as the total number of licensable &quot;seats&quot;. It can be wonky at renewal time if multiple subscriptions have a few days of overlap</inlineHelpText>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>