unpackaged/main/default/objects/Gearset_Team__c/fields/Payment_method__c.field-meta.xml
<CustomField>
    <fullName>Payment_method__c</fullName>
    <description>This is how the customer pays, either through a credit card they've left on file or else via an invoice which we send at the end of each cycle</description>
    <inlineHelpText>This is how the customer pays, either through a credit card they've left on file or else via an invoice which we send at the end of each cycle</inlineHelpText>
    <label>Payment method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>auto-charge</fullName>
            </value>
            <value>
                <fullName>invoice</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>