unpackaged/main/default/objects/Gearset_Team__c/fields/Team_active_backup_jobs__c.field-meta.xml
<CustomField>
    <fullName>Team_active_backup_jobs__c</fullName>
    <description>This is the total number of backup jobs that are currently configured for this team</description>
    <inlineHelpText>This is the total number of backup jobs that are currently configured for this team</inlineHelpText>
    <label>Active backup jobs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>