unpackaged/main/default/objects/Gearset_Team__c/fields/Team_active_continuous_integration_jobs__c.field-meta.xml
<CustomField>
    <fullName>Team_active_continuous_integration_jobs__c</fullName>
    <description>The number of continuous integration jobs that are currently configured and active for this team</description>
    <inlineHelpText>The number of continuous integration jobs that are currently configured and active for this team</inlineHelpText>
    <label>Active continuous integration jobs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>