unpackaged/main/default/objects/Gearset_Team__c/fields/Team_active_org_connections__c.field-meta.xml
<CustomField>
    <fullName>Team_active_org_connections__c</fullName>
    <description>The number of orgs linked via OAuth across all members of the team. This doesn&#39;t mean the number of _distinct_ orgs that are linked to, as each member of the team may bring their connection to the same org. This excludes scratch orgs and user/pass orgs.</description>
    <inlineHelpText>The number of orgs linked via OAuth across all members of the team. This doesn&#39;t mean the number of _distinct_ orgs that are linked to, as each member of the team may bring their connection to the same org. This excludes scratch orgs and user/pass orgs.</inlineHelpText>
    <label>Active org connections</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>