unpackaged/main/default/objects/Gearset_Team__c/fields/Team_active_org_prod_connections__c.field-meta.xml
<CustomField>
    <fullName>Team_active_org_prod_connections__c</fullName>
    <description>This is the _total_ number of production org connections that is linked to a team. This isn&#39;t distinct production orgs, but could for example be each person in the team linking to the same org</description>
    <inlineHelpText>This is the _total_ number of production org connections that is linked to a team. This isn&#39;t distinct production orgs, but could for example be each person in the team linking to the same org</inlineHelpText>
    <label>Team active org prod connections</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>