unpackaged/main/default/objects/Gearset_Team__c/fields/Team_active_team_members__c.field-meta.xml
<CustomField>
    <fullName>Team_active_team_members__c</fullName>
    <description>This is the number of members on the team. It doesn&#39;t necessarily mean they are licensed, or indeed using product actively, it just means they could login to this team if they wish.</description>
    <inlineHelpText>This is the number of members on the team. It doesn&#39;t necessarily mean they are licensed, or indeed using product actively, it just means they could login to this team if they wish.</inlineHelpText>
    <label>Active team members</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>