unpackaged/main/default/objects/Gearset_Team__c/fields/Team_backup_size__c.field-meta.xml
<CustomField>
    <fullName>Team_backup_size__c</fullName>
    <description>This is the sum of the database storage required for the team's backup jobs. The unit is MB. It doesn't include any S3 storage that we use for attachments and binary. It's just the RDS storage as used for de-duped records.</description>
    <inlineHelpText>This is the sum of the database storage required for the team's backup jobs. The unit is MB. It doesn't include any S3 storage that we use for attachments and binary. It's just the RDS storage as used for de-duped records.</inlineHelpText>
    <label>Backup storage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>