unpackaged/main/default/objects/Gearset_Team__c/fields/Team_inactive_continuous_integration_job__c.field-meta.xml
<CustomField>
    <fullName>Team_inactive_continuous_integration_job__c</fullName>
    <description>This is the number of inactive jobs that are configured for this team. These are jobs that are marked as disabled</description>
    <inlineHelpText>This is the number of inactive jobs that are configured for this team. These are jobs that are marked as disabled</inlineHelpText>
    <label>Inactive configuration integration jobs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>