unpackaged/main/default/objects/Gearset_Team__c/fields/Team_license_reassignments__c.field-meta.xml
<CustomField>
    <fullName>Team_license_reassignments__c</fullName>
    <description>The number of times that licenses have been unassigned in the last 14 day period. It could be the same license being repeatedly unassigned and assigned to another team member, or just a batch reassignment once across the entire team for some reason</description>
    <inlineHelpText>The number of times that licenses have been unassigned in the last 14 day period. It could be the same license being repeatedly unassigned and assigned to another team member, or just a batch reassignment once across the entire team for some reason</inlineHelpText>
    <label>License reassignments</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>