unpackaged/main/default/objects/Gearset_Team__c/fields/Team_license_reassignments_remaining__c.field-meta.xml
<CustomField>
    <fullName>Team_license_reassignments_remaining__c</fullName>
    <defaultValue>0</defaultValue>
    <description>The number of license reassignments the team has remaining this month. This takes account of if a team has had their assignments reset (I.E. resetting a team&#39;s license assignments for the month will reset this field too).</description>
    <inlineHelpText>The number of license reassignments the team has remaining this month. This takes account of if a team has had their assignments reset (I.E. resetting a team&#39;s license assignments for the month will reset this field too).</inlineHelpText>
    <label>Team license reassignments remaining</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>