unpackaged/main/default/objects/Gearset_Team__c/fields/Team_Owner_Email__c.field-meta.xml
<CustomField>
    <fullName>Team_Owner_Email__c</fullName>
    <description>This is the email of the _first_ owner of the team. Now that we have multiple team owners, this owner email isn't 100% accurate but is useful for giving a thread to pull on.</description>
    <inlineHelpText>This is the email of the _first_ owner of the team. Now that we have multiple team owners, this owner email isn't 100% accurate but is useful for giving a thread to pull on.</inlineHelpText>
    <label>Team owner email</label>
    <type>Email</type>
</CustomField>