unpackaged/main/default/objects/Gearset_Team__c/fields/Team_Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>Team_Owner_Name__c</fullName>
    <label>Team owner name</label>
    <description>This is the name of the _first_ owner of the team. Now that we have multiple team owners, this owner name isn't 100% accurate but is useful for giving a thread to pull on.</description>
    <inlineHelpText>This is the name of the _first_ owner of the team. Now that we have multiple team owners, this owner name isn't 100% accurate but is useful for giving a thread to pull on.</inlineHelpText>
    <length>100</length>
    <type>Text</type>
</CustomField>