unpackaged/main/default/objects/Gearset_Team__c/fields/Team_revenue_usage_trend__c.field-meta.xml
<CustomField>
    <fullName>Team_revenue_usage_trend__c</fullName>
    <label>Usage trend</label>
    <description>The usage trend is a measure of number of comparions across the team, compared with the previous 30 days. It is a crude measure of whether the team are using the product more or less frequently than they were.</description>
    <inlineHelpText>The usage trend is a measure of number of comparions across the team, compared with the previous 30 days. It is a crude measure of whether the team are using the product more or less frequently than they were.</inlineHelpText>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>