unpackaged/main/default/objects/Gearset_Team__c/fields/Total_components_deployed_count__c.field-meta.xml
<CustomField>
    <fullName>Total_components_deployed_count__c</fullName>
    <defaultValue>0</defaultValue>
    <description>The total number of components deployed by this team.</description>
    <inlineHelpText>The total number of components deployed by this team.</inlineHelpText>
    <label>Components Deployed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>