unpackaged/main/default/objects/Gearset_Team__c/fields/Total_data_backup_count__c.field-meta.xml
<CustomField>
    <fullName>Total_data_backup_count__c</fullName>
    <label>Backup seats</label>
    <description>This is the total number of backup seats that the user has assigned to their account. We don&#39;t currently enforce that the team doesn&#39;t breach this limit, so it&#39;s something that we should check at renewal time.</description>
    <inlineHelpText>This is the total number of backup seats that the user has assigned to their account. We don&#39;t currently enforce that the team doesn&#39;t breach this limit, so it&#39;s something that we should check at renewal time.</inlineHelpText>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>