unpackaged/main/default/objects/Gearset_Team__c/fields/Total_data_backup_revenue__c.field-meta.xml
<CustomField>
    <fullName>Total_data_backup_revenue__c</fullName>
    <label>Backup revenue</label>
    <description>The revenue for this team that comes from Data Backup subscriptions. This number can get wonky around renewal time if there are overlapping subscriptions assigned to the team that can double count revenue.</description>
    <inlineHelpText>The revenue for this team that comes from Data Backup subscriptions. This number can get wonky around renewal time if there are overlapping subscriptions assigned to the team that can double count revenue.</inlineHelpText>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>