unpackaged/main/default/objects/Gearset_Team__c/fields/Total_data_compliance_count__c.field-meta.xml
<CustomField>
    <fullName>Total_data_compliance_count__c</fullName>
    <label>Data compliance seats</label>
    <description>The number of seats of the Data Compliance product that the team have available. It's a bit academic as the add-on is enabled or disabled for the team, however, this number from a license perspective should be the sum of (Pro + Ent + Platform)</description>
    <inlineHelpText>The number of seats of the Data Compliance product that the team have available. It's a bit academic as the add-on is enabled or disabled for the team, however, this number from a license perspective should be the sum of (Pro + Ent + Platform)</inlineHelpText>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>