unpackaged/main/default/objects/Gearset_Team__c/fields/Total_failed_deployment_count__c.field-meta.xml
<CustomField>
    <fullName>Total_failed_deployment_count__c</fullName>
    <defaultValue>0</defaultValue>
    <description>The total number of deployments which have failed for this team.</description>
    <inlineHelpText>The total number of deployments which have failed for this team.</inlineHelpText>
    <label>Failed Deployments</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>