unpackaged/main/default/objects/Gearset_Team__c/fields/Total_pro_count__c.field-meta.xml
<CustomField>
    <fullName>Total_pro_count__c</fullName>
    <label>Pro seats</label>
    <precision>18</precision>
    <description>The total number of seats of Pro licensed to this team across their subscriptions. This number can get wonky at renewal time if they have multiple overlapping subscriptions of Gearset where one is about to finish and the other is just beginning</description>
    <inlineHelpText>The total number of seats of Pro licensed to this team across their subscriptions. This number can get wonky at renewal time if they have multiple overlapping subscriptions of Gearset where one is about to finish and the other is just beginning</inlineHelpText>
    <scale>0</scale>
    <type>Number</type>
</CustomField>