unpackaged/main/default/objects/Gearset_Team__c/fields/Total_rollback_count__c.field-meta.xml
<CustomField>
    <fullName>Total_rollback_count__c</fullName>
    <description>The total number of rollbacks which have been carried out by this team.</description>
    <inlineHelpText>The total number of rollbacks which have been carried out by this team.</inlineHelpText>
    <label>Rollbacks</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>