unpackaged/main/default/objects/Gearset_Team__c/fields/Total_successful_deployment_count__c.field-meta.xml
<CustomField>
    <fullName>Total_successful_deployment_count__c</fullName>
    <defaultValue>0</defaultValue>
    <description>The total number of successful deployments this team has made.</description>
    <inlineHelpText>The total number of successful deployments this team has made.</inlineHelpText>
    <label>Successful Deployments</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>