unpackaged/main/default/objects/Gearset_Team__c/fields/Total_team_revenue__c.field-meta.xml
<CustomField>
    <fullName>Total_team_revenue__c</fullName>
    <label>Total revenue</label>
    <precision>18</precision>
    <description>The total revenue that we count for this team across all their subscriptions. This number rolls up to the company MRR. This number can be wonky around renewal if there are multiple overlapping subscriptions with some about to finish and others to start</description>
    <inlineHelpText>The total revenue that we count for this team across all their subscriptions. This number rolls up to the company MRR. This number can be wonky around renewal if there are multiple overlapping subscriptions with some about to finish and others to start</inlineHelpText>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>