unpackaged/main/default/objects/Gearset_Team__c/fields/Trial_created__c.field-meta.xml
<CustomField>
    <fullName>Trial_created__c</fullName>
    <description>This is the date that the trial was created. This date will never change. Trial adjustments can be added which can either extend of reduce the effective trial length</description>
    <inlineHelpText>This is the date that the trial was created. This date will never change. Trial adjustments can be added which can either extend of reduce the effective trial length</inlineHelpText>
    <label>Trial created</label>
    <type>DateTime</type>
</CustomField>