unpackaged/main/default/objects/Gearset_Team__c/fields/Trial_remaining__c.field-meta.xml
<CustomField>
    <fullName>Trial_remaining__c</fullName>
    <description>Number of days remaining on the team&#39;s trial. If this is a negative number, then that is the number of days elapsed since the end of their trial</description>
    <inlineHelpText>Number of days remaining on the team&#39;s trial. If this is a negative number, then that is the number of days elapsed since the end of their trial</inlineHelpText>
    <label>Trial remaining</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>